--- a/users/package.json
+++ b/users/package.json
@@ -4,7 +4,7 @@
   "description": "User Auth API",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
+    "start": "nodemon main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +17,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
+    "request": "^2.88.2",
+    "store": "^2.0.12",
+    "url": "^0.11.0"
   }
 }
